--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: var(--cor-fundo);
+ background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTYuYlXQKgW4EzShAlxmHEayXi78TKNdHk3Kw&s);
     color: var(--cor-texto);
     display: flex;
     justify-content: center;
